AM_CFLAGS = $(GLIB_CFLAGS) $(GTK_CFLAGS) $(CAIRO_CFLAGS)

lib_LTLIBRARIES = libgraph-gtk.la

include_HEADERS = 		graph_gtk_view.h	\
				graph_gtk_node.h	\
				graph_gtk_pad.h		\
				graph_gtk_connection.h

libgraph-gtk_la_SOURCES = 	graph_gtk_view.c	\
				graph_gtk_node.c	\
				graph_gtk_pad.c		\
				graph_gtk_connection.c
