AM_CFLAGS = $(GTK_CFLAGS) -g
LIBS = $(GTK_LIBS)

lib_LTLIBRARIES = libgraph-gtk.la

pkginclude_HEADERS = 		graph-gtk-view.h	\
				graph-gtk-node.h	\
				graph-gtk-pad.h		\
				graph-gtk-connection.h

libgraph_gtk_la_SOURCES = 	graph-gtk-view.c	\
				graph-gtk-node.c	\
				graph-gtk-pad.c		\
				graph-gtk-connection.c
